# dagster-pipes-java

./: .gitignore  README.md  build.gradle  pyproject.toml  quicktype.sh
config/: pmd-ruleset.xml
jsonschema/pipes/: PipesLog.schema.json
scripts/: quicktype.sh
src/dagster_pipes_java/: definitions.py
src/main/java/: PipesMappingParamsLoader.java  PipesParamsLoader.java
src/main/java/pipes/: DagsterPipesException.java  DataLoader.java  Main.java  PartitionKeyRange.java  PartitionTimeWindow.java  PipesBufferedStreamMessageWriterChannel.java  PipesConstants.java  PipesContext.java  PipesContextData.java  PipesContextLoader.java  PipesDataProvenance.java  PipesDefaultContextLoader.java  PipesDefaultMessageWriter.java  PipesEnvVarParamsLoader.java  PipesExtras.java  PipesFileMessageWriterChannel.java  PipesMappingParamsLoader.java  PipesMessage.java  PipesMessageWriter.java  PipesMessageWriterChannel.java  PipesMetadata.java  PipesOpenedData.java  PipesParamsLoader.java  PipesPartitionKeyRange.java  PipesSession.java  PipesStreamMessageWriterChannel.java  PipesTimeWindow.java  PipesVariables.java  ThrowingConsumer.java  WriterChannelLoader.java
src/main/java/types/: CauseCause.java  CauseContext.java  Context.java  ContextClass.java  Converter.java  Event.java  ExceptionCause.java  ExceptionContext.java  Log.java  Metadata.java  PipesException.java  PipesExceptionCause.java  PipesExceptionClass.java  PipesExceptionContext.java  PipesLog.java  PurpleException.java  Type.java
src/test/java/pipes/: ContextDataTest.java  (+5 more)
tests/: conftest.py  test_java_pipes.py
(+32 files in other folders)
